Added cafelib.png & LICENSE files

--- a/BsvSharp/CafeLib.BsvSharp/CafeLib.BsvSharp.csproj
+++ b/BsvSharp/CafeLib.BsvSharp/CafeLib.BsvSharp.csproj
@@ -47,7 +47,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\..\..\cafelib.png">
+    <None Include="..\..\cafelib.png">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
