More code clean up.

--- a/BsvSharp.Api/CafeLib.BsvSharp.Api.CoinGecko/CafeLib.BsvSharp.Api.CoinGecko.csproj
+++ b/BsvSharp.Api/CafeLib.BsvSharp.Api.CoinGecko/CafeLib.BsvSharp.Api.CoinGecko.csproj
@@ -18,7 +18,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\..\cafelib.png">
+    <None Include="..\..\cafelib.png">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
