--- a/BsvSharp.Api/CafeLib.BsvSharp.Api.UnitTests/CafeLib.BsvSharp.Api.UnitTests.csproj
+++ b/BsvSharp.Api/CafeLib.BsvSharp.Api.UnitTests/CafeLib.BsvSharp.Api.UnitTests.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="CafeLib.Core" Version="1.5.0" />
     <PackageReference Include="CafeLib.Web.Request" Version="1.5.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+    <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
