Working on upgrading WhatsOnChain

--- a/BsvSharp.Api/CafeLib.BsvSharp.Api.WhatsOnChain/CafeLib.BsvSharp.Api.WhatsOnChain.csproj
+++ b/BsvSharp.Api/CafeLib.BsvSharp.Api.WhatsOnChain/CafeLib.BsvSharp.Api.WhatsOnChain.csproj
@@ -36,4 +36,8 @@
     <PackageReference Include="CafeLib.Web.Request" Version="$(Version)" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CafeLib.BsvSharp.Mapi\CafeLib.BsvSharp.Mapi.csproj" />
+  </ItemGroup>
+
 </Project>
