--- a/BsvSharp.Api/CafeLib.BsvSharp.Api.CoinGecko/CafeLib.BsvSharp.Api.CoinGecko.csproj
+++ b/BsvSharp.Api/CafeLib.BsvSharp.Api.CoinGecko/CafeLib.BsvSharp.Api.CoinGecko.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Description>Bitcoin SV API library for CoinGecko services.</Description>
-    <Version Condition=" '$(Version)' == '' ">1.7.0</Version>
+    <Version Condition=" '$(Version)' == '' ">2.0.0</Version>
     <Copyright>© 2021 Chris Solutions</Copyright>
     <PackageReleaseNotes></PackageReleaseNotes>
     <PackageIcon>cafelib.png</PackageIcon>
