--- a/BsvSharp.Api/CafeLib.BsvSharp.Api.UnitTests/CafeLib.BsvSharp.Api.UnitTests.csproj
+++ b/BsvSharp.Api/CafeLib.BsvSharp.Api.UnitTests/CafeLib.BsvSharp.Api.UnitTests.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Version Condition=" '$(Version)' == '' ">1.7.0</Version>
+    <TargetFramework>net6.0</TargetFramework>
+    <Version Condition=" '$(Version)' == '' ">2.0.0</Version>
     <IsPackable>false</IsPackable>
 
     <LangVersion>8.0</LangVersion>
