--- a/Samples/BlazorWallet/BlazorWallet/BlazorWallet.csproj
+++ b/Samples/BlazorWallet/BlazorWallet/BlazorWallet.csproj
@@ -1,17 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-	<Version Condition=" '$(Version)' == '' ">1.7.0</Version>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CafeLib.Blazor" Version="1.8.0" />
-    <PackageReference Include="CafeLib.BsvSharp" Version="$(Version)" />
-    <PackageReference Include="CafeLib.BsvSharp.Api.WhatsOnChain" Version="$(Version)" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.10" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.10" PrivateAssets="all" />
-    <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
+    <PackageReference Include="CafeLib.Blazor" Version="2.0.0" />
+    <PackageReference Include="CafeLib.BsvSharp" Version="2.0.0" />
+    <PackageReference Include="CafeLib.BsvSharp.Api.WhatsOnChain" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.7" PrivateAssets="all" />
+    <PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
