--- a/BsvSharp.Api/CafeLib.BsvSharp.Api.Paymail/CafeLib.BsvSharp.Api.Paymail.csproj
+++ b/BsvSharp.Api/CafeLib.BsvSharp.Api.Paymail/CafeLib.BsvSharp.Api.Paymail.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\..\BsvSharp\LICENSE" >
+    <None Include="..\..\BsvSharp\LICENSE">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
@@ -33,8 +33,9 @@
 
   <ItemGroup>
     <PackageReference Include="CafeLib.BsvSharp" Version="$(Version)" />
+    <PackageReference Include="CafeLib.Core" Version="2.0.0" />
     <PackageReference Include="CafeLib.Web.Request" Version="$(Version)" />
-    <PackageReference Include="DnsClient" Version="1.5.0" />
+    <PackageReference Include="DnsClient" Version="1.6.1" />
   </ItemGroup>
 
 </Project>
