--- a/.gitignore
+++ b/.gitignore
@@ -28,9 +28,11 @@ obj/
 _ReSharper*/
 [Tt]est[Rr]esult*
 .vs/
+.vscode/
 .idea/
 #Nuget packages folder
 packages/
 Repo/
-buildapi.cmd
+buildnuget.cmd
 /BsvSharp.Api/CafeLib.BsvSharp.Api.UnitTests/apikey.json
+/.config/dotnet-tools.json
