--- a/BsvSharp.Api/CafeLib.BsvSharp.Api.CoinGecko/CafeLib.BsvSharp.Api.CoinGecko.csproj
+++ b/BsvSharp.Api/CafeLib.BsvSharp.Api.CoinGecko/CafeLib.BsvSharp.Api.CoinGecko.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Description>Bitcoin SV API library for CoinGecko services.</Description>
-    <Version Condition=" '$(Version)' == '' ">2.0.0</Version>
+    <Version Condition=" '$(Version)' == '' ">2.0.1</Version>
     <Copyright>© 2021 Chris Solutions</Copyright>
     <PackageReleaseNotes></PackageReleaseNotes>
     <PackageIcon>cafelib.png</PackageIcon>
@@ -33,7 +33,7 @@
 
   <ItemGroup>
     <PackageReference Include="CafeLib.BsvSharp" Version="$(Version)" />
-    <PackageReference Include="CafeLib.Web.Request" Version="$(Version)" />
+    <PackageReference Include="CafeLib.Web.Request" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
