--- a/BsvSharp.Api/CafeLib.BsvSharp.Api.Paymail/CafeLib.BsvSharp.Api.Paymail.csproj
+++ b/BsvSharp.Api/CafeLib.BsvSharp.Api.Paymail/CafeLib.BsvSharp.Api.Paymail.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Description>Bitcoin SV API library for Paymail services.</Description>
-    <Version Condition=" '$(Version)' == '' ">2.0.0</Version>
+    <Version Condition=" '$(Version)' == '' ">2.0.1</Version>
     <Copyright>© 2021 Chris Solutions</Copyright>
     <PackageReleaseNotes></PackageReleaseNotes>
     <PackageIcon>cafelib.png</PackageIcon>
@@ -34,7 +34,7 @@
   <ItemGroup>
     <PackageReference Include="CafeLib.BsvSharp" Version="$(Version)" />
     <PackageReference Include="CafeLib.Core" Version="2.0.0" />
-    <PackageReference Include="CafeLib.Web.Request" Version="$(Version)" />
+    <PackageReference Include="CafeLib.Web.Request" Version="2.0.0" />
     <PackageReference Include="DnsClient" Version="1.6.1" />
   </ItemGroup>
 
