--- a/BsvSharp/CafeLib.BsvSharp/CafeLib.BsvSharp.csproj
+++ b/BsvSharp/CafeLib.BsvSharp/CafeLib.BsvSharp.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Description>Bitcoin SV library and services.</Description>
-    <Version Condition=" '$(Version)' == '' ">2.0.0</Version>
+    <Version Condition=" '$(Version)' == '' ">2.0.1</Version>
     <Copyright>© 2021 Chris Solutions</Copyright>
     <PackageReleaseNotes></PackageReleaseNotes>
     <PackageIcon>cafelib.png</PackageIcon>
@@ -37,11 +37,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CafeLib.Core" Version="$(Version)" />
-    <PackageReference Include="CafeLib.Core.Buffers" Version="$(Version)" />
-    <PackageReference Include="CafeLib.Core.Encodings" Version="$(Version)" />
-    <PackageReference Include="CafeLib.Core.Numerics" Version="$(Version)" />
-    <PackageReference Include="CafeLib.Cryptography" Version="$(Version)" />
+    <PackageReference Include="CafeLib.Core" Version="2.0.0" />
+    <PackageReference Include="CafeLib.Core.Buffers" Version="2.0.0" />
+    <PackageReference Include="CafeLib.Core.Encodings" Version="2.0.0" />
+    <PackageReference Include="CafeLib.Core.Numerics" Version="2.0.0" />
+    <PackageReference Include="CafeLib.Cryptography" Version="2.0.0" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
