--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,5 @@ _ReSharper*/
 #Nuget packages folder
 packages/
 Repo/
-buildapi.cmd
+buildnuget.cmd
 /BsvSharp.Api/CafeLib.BsvSharp.Api.UnitTests/apikey.json
