--- a/Samples/BlazorWallet/BlazorWallet/BlazorWallet.csproj
+++ b/Samples/BlazorWallet/BlazorWallet/BlazorWallet.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -6,10 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="CafeLib.Blazor" Version="2.0.0" />
-    <PackageReference Include="CafeLib.BsvSharp" Version="2.0.1" />
+    <PackageReference Include="CafeLib.BsvSharp" Version="2.0.2" />
     <PackageReference Include="CafeLib.BsvSharp.Api.WhatsOnChain" Version="2.0.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.8" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.8" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.9" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.9" PrivateAssets="all" />
     <PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
   </ItemGroup>
 
