--- a/BsvSharp.Api/CafeLib.BsvSharp.Api.WhatsOnChain/CafeLib.BsvSharp.Api.WhatsOnChain.csproj
+++ b/BsvSharp.Api/CafeLib.BsvSharp.Api.WhatsOnChain/CafeLib.BsvSharp.Api.WhatsOnChain.csproj
@@ -32,7 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CafeLib.BsvSharp" Version="$(Version)" />
+    <PackageReference Include="CafeLib.BsvSharp" Version="2.0.2" />
     <PackageReference Include="CafeLib.Web.Request" Version="2.0.0" />
   </ItemGroup>
 
